配置了GitHub-App的相关属性至application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+github.client.id = 88dc86e5d45740f29107
+github.client.secret = 61bdf9e8fcc1e8004fdf9ff1ddb3e933992bbc11
+github.redirect.url = http://localhost:8080/callback
