--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 github.client.id = 88dc86e5d45740f29107
 github.client.secret = 61bdf9e8fcc1e8004fdf9ff1ddb3e933992bbc11
 github.redirect.url = http://localhost:8080/callback
+
+#数据库连接池Druid
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql:///comumit?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf-8
+spring.datasource.username=cangjie
+spring.datasource.password=xiaowu@520
+
+#MyBatis配置
+mybatis.type-aliases-package=online.cangjie.comumit.dto
+#mybatis.mapper-locations = classpath:mapper/*.xml
+
+#配置日志等级
+#logging.level.root = debug
