配置了Redis和从Cookies处登录

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#GitHubAPP配置
 github.client.id = 88dc86e5d45740f29107
 github.client.secret = 61bdf9e8fcc1e8004fdf9ff1ddb3e933992bbc11
 github.redirect.url = http://localhost:8080/callback
@@ -15,3 +16,7 @@ mybatis.type-aliases-package=online.cangjie.comumit.dto
 
 #配置日志等级
 #logging.level.root = debug
+
+##配置Redis连接信息
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
