主页的问题展示，和新增了储存头像URL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=cangjie
 spring.datasource.password=xiaowu@520
 
 #MyBatis配置
-mybatis.type-aliases-package=online.cangjie.comumit.dto
+mybatis.type-aliases-package=online.cangjie.comumit.po
 #mybatis.mapper-locations = classpath:mapper/*.xml
 
 #配置日志等级
