--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>2.1.6.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -68,6 +72,14 @@
             <version>8.0.16</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -78,7 +90,6 @@
             </plugin>
         </plugins>
     </build>
-
 
     <repositories>
         <repository>
