--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ mybatis.type-aliases-package=online.cangjie.comumit.po
 ##配置Redis连接信息
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
+
+##设置分页大小
+page.size = 10
